--- a/account.html
+++ b/account.html
@@ -1,25 +1,22 @@
-<!DOCTYPE html>
+< !DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mijn profiel - MeeClimb</title>
-
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
-
     <link rel="icon" href="favicon.svg" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link rel="manifest" href="manifest.json" />
-
     <script src="js/app.js"></script>
   </head>
   <body id="account">
     <header class="c-header">
       <div class="c-header__logo">
-        <a href="index.html" class="c-logo u-mb-clear">
-          <svg xmlns="http://www.w3.org/2000/svg" class="c-logo__symbol" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
+        <a href="index.html" class="c-logo u-mb-clear"
+          ><svg xmlns="http://www.w3.org/2000/svg" class="c-logo__symbol" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
             <defs>
               <style>
                 .a {
@@ -32,13 +29,9 @@
                   stroke-miterlimit: 10;
                 }
               </style>
-              <clipPath id="b">
-                <rect width="32" height="32" />
-              </clipPath>
+              <clipPath id="b"><rect width="32" height="32" /></clipPath>
             </defs>
-            <g id="a" class="a">
-              <path class="b" d="M-955.584,341.472l-2.942-1.7v-5.662l4.91,2.71,4.91-2.71v5.662l-2.942,1.7a3.932,3.932,0,0,1-1.968.528A3.932,3.932,0,0,1-955.584,341.472Zm12.565-20.839a.848.848,0,0,0-1.272-.734l-9.318,5.257-9.332-5.257a.848.848,0,0,0-1.272.734v15.857l-1.819-1.05A3.939,3.939,0,0,1-968,332.033V319.967a3.939,3.939,0,0,1,1.968-3.408l10.448-6.031a3.933,3.933,0,0,1,3.936,0l10.448,6.031a3.938,3.938,0,0,1,1.968,3.408v12.065a3.938,3.938,0,0,1-1.968,3.408l-1.819,1.05Z" transform="translate(970 -310)" />
-            </g>
+            <g id="a" class="a"><path class="b" d="M-955.584,341.472l-2.942-1.7v-5.662l4.91,2.71,4.91-2.71v5.662l-2.942,1.7a3.932,3.932,0,0,1-1.968.528A3.932,3.932,0,0,1-955.584,341.472Zm12.565-20.839a.848.848,0,0,0-1.272-.734l-9.318,5.257-9.332-5.257a.848.848,0,0,0-1.272.734v15.857l-1.819-1.05A3.939,3.939,0,0,1-968,332.033V319.967a3.939,3.939,0,0,1,1.968-3.408l10.448-6.031a3.933,3.933,0,0,1,3.936,0l10.448,6.031a3.938,3.938,0,0,1,1.968,3.408v12.065a3.938,3.938,0,0,1-1.968,3.408l-1.819,1.05Z" transform="translate(970 -310)" /></g>
           </svg>
         </a>
       </div>
@@ -53,26 +46,22 @@
         </nav>
       </div>
       <div class="c-header__nav">
-        <nav class="c-nav c-nav--meta">
-          <ul class="o-list c-nav__list u-mb-clear">
-            <li class="c-nav__item">
-              <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Rope" class="c-nav__link">Login</a>
-            </li>
-            <li class="c-nav__item">
-              <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Rope" class="c-nav__link c-nav__link--meta">Registreer</a>
-            </li>
-          </ul>
-        </nav>
+        <div class="c-nav__profile c-nav__profile--meta">
+          <a href="#notifications" class="c-nav__notification has-notification" tabindex="0">
+            <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
+              <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+              <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+            </svg>
+          </a>
+          <a href="profile.html" class="c-nav__profileimg c-nav__profileimg--meta"></a>
+        </div>
       </div>
       <div class="c-header__mobile-nav-trigger">
-        <button class="o-button-reset c-nav-trigger js-toggle-nav">
-          <svg class="c-nav-trigger__svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" />
-          </svg>
+        <button class="o-button-reset c-nav-trigger js-toggle-nav u-mb-clear">
+          <svg class="c-nav-trigger__svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" /></svg>
         </button>
       </div>
     </header>
-
     <aside class="c-mobile-nav">
       <div class="c-mobile-nav__bg"></div>
       <div class="c-mobile-nav__body">
@@ -91,19 +80,13 @@
                     stroke-miterlimit: 10;
                   }
                 </style>
-                <clipPath id="b">
-                  <rect width="32" height="32" />
-                </clipPath>
+                <clipPath id="b"><rect width="32" height="32" /></clipPath>
               </defs>
-              <g id="a" class="a">
-                <path class="b" d="M-955.584,341.472l-2.942-1.7v-5.662l4.91,2.71,4.91-2.71v5.662l-2.942,1.7a3.932,3.932,0,0,1-1.968.528A3.932,3.932,0,0,1-955.584,341.472Zm12.565-20.839a.848.848,0,0,0-1.272-.734l-9.318,5.257-9.332-5.257a.848.848,0,0,0-1.272.734v15.857l-1.819-1.05A3.939,3.939,0,0,1-968,332.033V319.967a3.939,3.939,0,0,1,1.968-3.408l10.448-6.031a3.933,3.933,0,0,1,3.936,0l10.448,6.031a3.938,3.938,0,0,1,1.968,3.408v12.065a3.938,3.938,0,0,1-1.968,3.408l-1.819,1.05Z" transform="translate(970 -310)" />
-              </g>
+              <g id="a" class="a"><path class="b" d="M-955.584,341.472l-2.942-1.7v-5.662l4.91,2.71,4.91-2.71v5.662l-2.942,1.7a3.932,3.932,0,0,1-1.968.528A3.932,3.932,0,0,1-955.584,341.472Zm12.565-20.839a.848.848,0,0,0-1.272-.734l-9.318,5.257-9.332-5.257a.848.848,0,0,0-1.272.734v15.857l-1.819-1.05A3.939,3.939,0,0,1-968,332.033V319.967a3.939,3.939,0,0,1,1.968-3.408l10.448-6.031a3.933,3.933,0,0,1,3.936,0l10.448,6.031a3.938,3.938,0,0,1,1.968,3.408v12.065a3.938,3.938,0,0,1-1.968,3.408l-1.819,1.05Z" transform="translate(970 -310)" /></g>
             </svg>
           </p>
           <button class="o-button-reset c-nav-trigger js-toggle-nav">
-            <svg class="c-nav-trigger__svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
-            </svg>
+            <svg class="c-nav-trigger__svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" /></svg>
           </button>
         </div>
         <div class="c-mobile-nav__nav c-mobile-nav__nav--main">
@@ -117,25 +100,105 @@
           </nav>
         </div>
         <div class="c-mobile-nav__nav">
-          <nav class="c-nav c-nav--meta">
-            <ul class="o-list c-nav__list">
-              <li class="c-nav__item">
-                <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Rope" class="c-nav__link">Login</a>
-              </li>
-              <li class="c-nav__item">
-                <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Rope" class="c-nav__link">Registreer</a>
-              </li>
-            </ul>
-          </nav>
+          <div class="c-nav__profile c-nav__profile--account">
+            <a href="#notifications" class="c-nav__notification has-notification">
+              <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
+                <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+                <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+              </svg>
+            </a>
+            <a href="profile.html" class="c-nav__profileimg c-nav__profileimg--account"></a>
+          </div>
         </div>
       </div>
     </aside>
-
-    <div class="c-account">
-      <section class="c-account__profile">
-        <div class="c-account__profile--background"></div>
-        <div class="c-account__profile--img"></div>
-      </section>
+    <div class="c-account-content">
+      <div class="c-account">
+        <section class="c-account__profile">
+          <div class="c-account__profile--background"></div>
+          <div class="c-account__profile--img">
+            <a href="#logout" class="c-account__logout"></a>
+          </div>
+          <div class="c-account__content">
+            <h2 class="c-account__profile--name u-mb-clear">Jhon Seed</h2>
+            <h4 class="c-account__profile--nickname u-mb-clear">JhonS123</h4>
+            <div class="c-account__friends">
+              <div class="c-account__friends--text u-mb-clear">
+                <p class="c-account__friends--aantal u-mb-clear">23</p>
+                KlimmerParteners
+              </div>
+              <div class="c-account__friends--text u-mb-clear">
+                <p class="c-account__friends--aantal u-mb-clear">12</p>
+                Likes
+              </div>
+              <div class="c-account__friends--text u-mb-clear">
+                <p class="c-account__friends--aantal u-mb-clear">57</p>
+                x Geklommen
+              </div>
+            </div>
+            <div class="c-account__friends--buttons">
+              <button href="#search klimmer" class="c-account__friend--search" value="Zoek klimmer">Zoek een klimmer</button>
+              <button href="#invite klimmer" class="c-account__friend--search" value="Zoek klimmer">Klimmer Uitnodigen</button>
+            </div>
+            <h3 class="c-account__profile--biotitel u-mb-clear">Mijn bio:</h3>
+            <p class="c-account__profile--bio">
+              Name: Jhon Seed Age: 27 Hometown: Denver, CO Jhon seed is a professional climber from Denver, Colorado. She has been climbing for 15 years and has climbed some of the most challenging routes in North America, Europe and Asia. Emma is known for her determination and grit.
+              <a href="#edit bio" class="c-account__profile--edit">
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-account__profile--edit--symbol" width="22" height="22" viewBox="0 0 22 22">
+                  <g id="edit" transform="translate(-1 -0.879)">
+                    <path id="Path_63" data-name="Path 63" d="M10.939,4H3.987A1.987,1.987,0,0,0,2,5.987V19.892a1.987,1.987,0,0,0,1.987,1.987H17.892a1.987,1.987,0,0,0,1.987-1.987V12.939" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
+                    <path id="Path_64" data-name="Path 64" d="M18.5,2.5a2.121,2.121,0,0,1,3,3L12,15,8,16l1-4Z" transform="translate(-0.121)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
+                  </g>
+                </svg>
+              </a>
+            </p>
+          </div>
+        </section>
+      </div>
+      <div class="c-account__activities">
+        <h1 class="c-account__activities--title">Recente activiteiten</h1>
+        <div class="c-activities">
+          <div class="c-activity">
+            <div class="c-activity__top">
+              <div class="c-activity__top--left">
+                <img src="/img/Wall/huygh.jpg" alt="profiel foto" class="c-activity__top--img" />
+                <div>
+                  <p class="u-mb-clear c-activity__top--naam">Jhon Seed</p>
+                  <p class="u-mb-clear c-activity__top--date">12/02/2022</p>
+                </div>
+              </div>
+              <input type="checkbox" name="heart" id="heart" class="o-hide-accessible c-heart-checkbox" />
+              <label for="heart" class="c-activity__heart">
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-activity__heart--symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-thumbs-up"><path d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"></path></svg>
+                <span>12</span>
+              </label>
+            </div>
+            <h5 class="u-mb-clear c-activity__intro">Heeft beklommen:</h5>
+            <div class="c-activity__stats">
+              <div>
+                <div>Touw: <span class="c-activity__stats--meta">2</span></div>
+                <div>Route: <span class="c-activity__stats--meta">2</span></div>
+              </div>
+              <div>
+                <div>Niveau: <span class="c-activity__stats--meta">3b+</span></div>
+                <div>Snelheid: <span class="c-activity__stats--meta">1,23</span>m/s</div>
+              </div>
+            </div>
+            <span class="c-activity__line"></span>
+            <p class="u-mb-clear c-activity__comment">Today I tackled a new climbing route and it was a blast! The holds were solid and the scenery was beautiful. I didn't pushed myself to the limit and it felt great to reach the summit. #climbing #adventure #outdoors</p>
+            <div class="c-activity__comment--add">
+              <textarea name="comment" id="comment" class="c-comment__area" rows="1" placeholder="Voeg een reactie toe"></textarea>
+              <label for="send_comment" class="c-commen__button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-send">
+                  <line x1="22" y1="2" x2="11" y2="13"></line>
+                  <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+                </svg>
+              </label>
+              <input type="submit" name="send_comment" id="send_comment" class="o-hide-accessible" />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
