--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </nav>
       </div>
       <div class="c-header__mobile-nav-trigger">
-        <button class="o-button-reset c-nav-trigger js-toggle-nav">
+        <button class="o-button-reset c-nav-trigger js-toggle-nav u-mb-clear">
           <svg class="c-nav-trigger__svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" />
           </svg>
